--- a/styles.css
+++ b/styles.css
@@ -651,11 +651,11 @@ html.dark #pitch p {
   box-shadow: 0 4px 15px rgba(0,0,0,0.1); 
 }
 
-.video-container video {
+.video-container iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  border: 0; /* Remove border/outline if browser adds one */
+  border: 0; 
 }
